test/trivial/shannon/readWriteBool.good
true
false
readWriteBool.chpl:9: error: bad format in channel.read(ref a:bool) with path "readWriteBool.stdin" offset 11
